# concat-arrays

./: Cargo.toml
src/: lib.rs
tests/: test.rs
tests/compile-fail/: invalid-length-zst.stderr  invalid-length.stderr
